--- a/10.security/4.securityContext/1.runAs.yaml
+++ b/10.security/4.securityContext/1.runAs.yaml
@@ -4,14 +4,14 @@ metadata:
   name: runas
 spec:
   securityContext:
-    runAsUser: 1001
-    fsGroup: 2001
+    runAsUser: 1000
+    fsGroup: 1000
   volumes:
   - name: mydisk
     emptyDir: {}
   containers:
   - name: runas
-    image: gcr.io/terrycho-sandbox/security-context:v1
+    image: andrewahn2134/security-context:v1
     imagePullPolicy: Always
     volumeMounts:
     - name: mydisk
